k8s-security-framework/policies/image-security/KSP-IMG-001/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: disallow-latest-tag-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: disallow-latest-tag
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-img-001-exception', 'ksp-img-001-exception-secondary',
      'ksp-img-001-exception-tertiary'] && object.metadata.namespace == 'policy-test'
