k8s-security-framework/policies/image-security/KSP-IMG-001/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-001-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-001-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-001-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: good
    image: harbor.example.com/demo-api:1.0.0
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:latest
    command:
    - sh
